--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <img src="js.png" />
 
-        <h1>Javascript Achievements: JOUW NAAM HIER</h1>
+        <h1>Javascript Achievements: Robin Schoenmaker</h1>
 
         <a href="https://trello.com/b/xo5TJzFr/javascript-achievements" target="_blank" class="big-link">Overzicht alle beschikbare
             opdrachten</a>
@@ -41,15 +41,15 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="Javascript-Lessen/Javascript Les 1/index.html">REQUIRED Achievement 1 (L1) </a></li>
 
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
+            <li></li>
             <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="Javascript-Lessen/Javascript_Les_2/start_1.html">REQUIRED Achievement 2 (L2) </a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
@@ -62,7 +62,7 @@
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
             <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li> </li>
             <li>...</li>
         </ul>
         <hr>
