--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
             <li><a href="Javascript-Lessen/Javascript Les 1/index.html">REQUIRED Achievement 1 (L1) </a></li>
+            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_1">GitHub versie</a>
 
         </ul>
         <hr>
@@ -50,33 +51,33 @@
             <li></li>
             <li>Javascript Achievement</li>
             <li><a href="Javascript-Lessen/Javascript_Les_2/start_1.html">REQUIRED Achievement 2 (L2) </a></li>
+            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_2">GitHub versie</a>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="Javascript-Lessen/Javascript_Les_3/index.html"> REQUIRED Achievement 3 (L3)</a></li>
+            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_3">GitHub versie</a>
+            <li></li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li> </li>
+            <li><a href="Javascript-Lessen/Javascript_Les_4/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+            <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
         <hr>
-        <h2>Les 5: Functions / Events</h3>
-        <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="Javascript-Lessen/Javascript_Les_5/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+            <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="Javascript-Lessen/Javascript_Les_6/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+            <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
     </div>
