--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li><a href="Javascript-Lessen/Javascript Les 1/index.html">REQUIRED Achievement 1 (L1) </a></li>
+            <li><a href="Javascript-Lessen/Javascript_Les_1/index.html">FTP Achievement 1 (L1) </a></li>
             <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_1">GitHub versie</a>
 
         </ul>
@@ -50,13 +50,13 @@
         <ul>
             <li></li>
             <li>Javascript Achievement</li>
-            <li><a href="Javascript-Lessen/Javascript_Les_2/start_1.html">REQUIRED Achievement 2 (L2) </a></li>
+            <li><a href="Javascript-Lessen/Javascript_Les_2/start_1.html">HTML5 Achievement 2 (L2) </a></li>
             <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_2">GitHub versie</a>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li><a href="Javascript-Lessen/Javascript_Les_3/index.html"> REQUIRED Achievement 3 (L3)</a></li>
+            <li><a href="Javascript-Lessen/Javascript_Les_3/index.html"> Text to speech Achievement 3 (L3)</a></li>
             <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_3">GitHub versie</a>
             <li></li>
             <li>...</li>
@@ -64,19 +64,20 @@
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li><a href="Javascript-Lessen/Javascript_Les_4/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+            <li><a href="Javascript-Lessen/Javascript_Les_4/index.html"> WebXR Achievement 4 (L4)</a></li>
             <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
         <hr>
-            <li><a href="Javascript-Lessen/Javascript_Les_5/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+         <h2>Les 5: </h2>
+            <li><a href="Javascript-Lessen/Javascript_Les_5/index.html"> Quiz Achievement 5 (L5)</a></li>
             <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
         <hr>
-        <h2>Les 6: Modulo</h3>
+        <h2>Les 6: Modulo</h2>
         <ul>
-            <li><a href="Javascript-Lessen/Javascript_Les_6/index.html"> REQUIRED Achievement 4 (L4)</a></li>
+            <li><a href="Javascript-Lessen/Javascript_Les_6/index.html"> API Achievement 6 (L6)</a></li>
             <a href="">GitHub versie</a>
             <li>...</li>
         </ul>
