Quiz is nu werkend

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <img src="js.png" />
 
         <h1>Javascript Achievements: Robin Schoenmaker</h1>
+        <a href="https://github.com/Streats22/Javascript-Achievements"> Github </a>
 
         <a href="https://trello.com/b/xo5TJzFr/javascript-achievements" target="_blank" class="big-link">Overzicht alle beschikbare
             opdrachten</a>
+        
 
         <p>
             Op deze pagina zet je je naam en je maakt hieronder een overzicht met linkjes naar alle Javascript achievements die je
@@ -42,8 +44,8 @@
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
             <li><a href="Javascript-Lessen/Javascript_Les_1/index.html">FTP Achievement 1 (L1) </a></li>
-            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_1">GitHub versie</a>
-
+            <li><a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_1">GitHub versie</a></li>
+            <li><a href="/JS_Achievements/JS Turtle/Demo.html">Turtle</a></li>
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
@@ -52,33 +54,34 @@
             <li>Javascript Achievement</li>
             <li><a href="Javascript-Lessen/Javascript_Les_2/start_1.html">HTML5 Achievement 2 (L2) </a></li>
             <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_2">GitHub versie</a>
+            <li><a href="/JS_Achievements/My_blog_JS:B2L2/JS:B2L2.html">My Blog</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
             <li><a href="Javascript-Lessen/Javascript_Les_3/index.html"> Text to speech Achievement 3 (L3)</a></li>
-            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_3">GitHub versie</a>
-            <li></li>
+            <li><a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_3">GitHub versie</a></li>
+            <li><a href="/JS_Achievements/Do_Date/index.html">Do Date</a></li> 
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
             <li><a href="Javascript-Lessen/Javascript_Les_4/index.html"> WebXR Achievement 4 (L4)</a></li>
-            <a href="">GitHub versie</a>
-            <li>...</li>
+            <li><a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_4">GitHub versie</a></li>
+            <li><a href="/JS_Achievements/"></a></li>
         </ul>
         <hr>
          <h2>Les 5: </h2>
             <li><a href="Javascript-Lessen/Javascript_Les_5/index.html"> Quiz Achievement 5 (L5)</a></li>
-            <a href="">GitHub versie</a>
-            <li>...</li>
+            <li><a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_5">GitHub versie</a></li>
+            
         </ul>
         <hr>
         <h2>Les 6: Modulo</h2>
         <ul>
             <li><a href="Javascript-Lessen/Javascript_Les_6/sensors.html"> API Achievement 6 (L6)</a></li>
-            <a href="">GitHub versie</a>
+            <a href="https://github.com/Streats22/Javascript-Achievements/tree/main/Javascript-Lessen/Javascript_Les_6">GitHub versie</a>
             <li>...</li>
         </ul>
     </div>
