--- a/Javascript-Lessen/Javascript_Les_5/index.html
+++ b/Javascript-Lessen/Javascript_Les_5/index.html
@@ -17,6 +17,7 @@
           <ul class="myAnswer" id="myAnswer"></ul>
       </div>
       <div class="resultBox" id="resultBox">einde</div>
+      <button class="quizbutton" id="quizbutton">Next Quiz</button> 
     </div>
   </body>
 </html>
